--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="page-wrapper">
-        <header>
-            <div class="text1">
-                <h1><strong>WE DESIGN YOUR SPACE</strong></h1>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quas nostrum voluptas</p>
-                <button class="btn"> SEE OUR PROJECTS </button>
+      <header>
+        <div class="text1">
+          <h1><strong>WE DESIGN YOUR SPACE</strong></h1>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quas
+            nostrum voluptas
+          </p>
+          <button class="btn">SEE OUR PROJECTS</button>
+        </div>
+      </header>
+      <aside>
+        <div class="aside">
+          <div class="aside-middle">
+            <div class="box">
+              <p class="nr"><strong>25</strong></p>
+              <p class="text3">YEARS OF EXPERIENCE</p>
             </div>
-        </header>
-        <aside>
-            <div>
-                <img class="aside-img" src="./aside pic2.png" alt="">
-
-            </div>
-        </aside><main>
-            <div>
-
-            </div>
-        </main>
+          </div>
+        </div>
+      </aside>
+      <main>
+        <div></div>
+      </main>
     </div>
-    
-</body>
+  </body>
 </html>
