--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
       <aside>
         <div class="aside">
           <div class="aside-middle">
+            <div class="box1"></div>
+            <!-- <img src="./feader pic.png" alt="" /> -->
             <div class="box">
               <p class="nr"><strong>25</strong></p>
               <p class="text3">YEARS OF EXPERIENCE</p>
             </div>
           </div>
-        </div>
       </aside>
+    </div>
       <main>
         <div></div>
       </main>
