--- a/index.html
+++ b/index.html
@@ -17,20 +17,33 @@
           <button class="btn">SEE OUR PROJECTS</button>
         </div>
       </header>
+
       <aside>
-        <div class="aside">
-          <div class="aside-middle">
-            <div class="box1"></div>
-            <!-- <img src="./feader pic.png" alt="" /> -->
-            <div class="box">
-              <p class="nr"><strong>25</strong></p>
-              <p class="text3">YEARS OF EXPERIENCE</p>
-            </div>
+        <div class="aside-middle">
+          <div class="box1"></div>
+          <div class="box">
+            <p class="nr"><strong>25</strong></p>
+            <p class="text3">YEARS OF EXPERIENCE</p>
           </div>
+        </div>
       </aside>
-    </div>
       <main>
-        <div></div>
+        <p class="main-text">ABOUT US</p>
+        <h2>Architechtural plan designe and build</h2>
+        <p class="main-text2">tatunka</p>
+        <p class="main-text3">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+          error recusandae dignissimos, cum qui rem voluptas consequuntur.
+          Excepturi corporis similique molestiae aperiam quis iure quo odio
+          repellendus, facilis aliquid at.
+        </p>
+        <div class="list">
+          <ul>
+            <li>Consectetur sed do eiusmod.</li>
+            <li>Eiusmod tempor incididunt labore.</li>
+          </ul>
+        </div>
+        <button class="btn1">ABOUT US</button>
       </main>
     </div>
   </body>
